# 13f-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.streamlit/: config.toml
_claude_docs/: FRONTEND_PARITY.md
config/: analysis.toml  managers.yaml  scoring.toml
docs/superpowers/plans/: 2026-05-21-13f-tracker.md  2026-05-22-13f-frontend-migration.md
docs/superpowers/specs/: 2026-05-20-13f-tracker-design.md
reports/quarto/: 01_overview.qmd  02_managers.qmd  03_signals.qmd  04_backtest.qmd  05_data_quality.qmd  _common.py  _quarto.yml  index.qmd
scripts/: bench_llm.py  init_db.py  supplement.py  supplement_sector.py
src/thirteen_f/: cli.py
src/thirteen_f/_legacy_dashboard/: _theme.py  app.py  charts.py  tables.py
src/thirteen_f/analyze/: cloning_quality.py  concentration.py  consensus.py  continuity.py  conviction.py  diff.py  pipeline.py  score.py
src/thirteen_f/backtest/: engine.py  metrics.py  runner.py  strategy.py
src/thirteen_f/collect/: cusip_mapper.py  edgar_client.py  loader.py  parser.py  pipeline.py  price_loader.py  resolve_cik.py
src/thirteen_f/core/: config.py  dates.py  logging.py
src/thirteen_f/dashboard/: _theme.py  app.py  charts.py  tables.py
src/thirteen_f/llm/: __init__.py  gemini.py  prompts.py  summary.py
src/thirteen_f/web/: __init__.py  ask_context.py  cli.py  exporter.py  queries.py  schemas.py  server.py
tests/integration/: test_collect_e2e.py  test_export_e2e.py  test_serve.py
tests/unit/: test_config.py  test_dates.py  test_init_db.py
참고/: PLAN.md  edgar_notes.md  schema.md
(+59 files in other folders)
