[project]
name = "thirteen-f"
version = "0.1.0"
description = "13F portfolio tracker for US investing gurus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "lxml>=5.0",
    "duckdb>=1.0",
    "polars>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "yfinance>=0.2",
    "pandas-datareader>=0.10",
    "typer>=0.12",
    "streamlit>=1.40",
    "plotly>=5.20",
    "rich>=13.0",
    "tenacity>=8.0",
    "jupyter>=1.0",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.scripts]
thirteen-f = "thirteen_f.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "vcrpy>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thirteen_f"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["integration: integration tests with network or external services"]
